--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
             "file": "c:\\Users\\laura\\Documents\\GitHub\\My-Website\\index.html"
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Open dogbreedselector.html",
+            "file": "c:\\Users\\laura\\Documents\\GitHub\\My-Website\\dogbreedselector.html"
         }
     ]
 }
